# fantasy-climbing-league

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  schema.sql  sync_events.py  sync_rankings.py
backend/app/: __init__.py  main.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: climbers.py  events.py  leaderboard.py  leagues.py  rankings.py  scoring.py  teams.py
backend/app/core/: auth.py  config.py
backend/app/db/: supabase.py
backend/app/schemas/: __init__.py  event.py  league.py  team.py  transfer.py
backend/app/services/: ifsc_data.py  ifsc_sdk.py  leaderboard.py  scoring.py  test_data.py
backend/migrations/: 004_athlete_tiers.sql
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Navbar.css  Navbar.tsx  TransferSection.css  TransferSection.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: Auth.css  CreateLeague.css  CreateLeague.tsx  EventBreakdown.css  EventBreakdown.tsx  Home.css  Home.tsx  LeagueDashboard.css  LeagueDashboard.tsx  Leagues.css  Leagues.tsx  Login.tsx  SignUp.tsx  TeamBreakdown.css  TeamBreakdown.tsx  TeamPage.tsx  TeamSelection.css  TeamSelection.tsx  TeamView.css  TeamView.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: countryFlags.ts
python-sdk/: .env.example  README.md  pyproject.toml
python-sdk/fantasy_climbing/: __init__.py  cli.py  db.py  scoring.py  sync.py  test_data.py
python-sdk/ifsc_sdk/: __init__.py  client.py  models.py
supabase/: config.toml
supabase/functions/calculate-leaderboard/: index.ts
supabase/functions/check-registration/: index.ts
supabase/migrations/: 002_add_transfers.sql  003_add_captain_history.sql  005_captain_multiplier.sql  006_add_speed_discipline.sql  007_rls_policies.sql  008_fix_recursive_rls.sql  009_add_registrations.sql  010_remove_transfer_revert.sql
(+3 files in other folders)
